<resources>
    <string name="app_name">Layouts</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="button2">button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="button7">Button7</string>
    <string name="button8">Button8</string>
    <string name="button9">Button9</string>
</resources>